[gd_scene load_steps=6 format=3 uid="uid://cfx3aprhi0tuj"]

[ext_resource type="PackedScene" uid="uid://rwshx017n0j7" path="res://scenes/cable_head.tscn" id="1_gw5f2"]
[ext_resource type="Script" path="res://scripts/battery_pylon.gd" id="1_qc5es"]
[ext_resource type="PackedScene" uid="uid://cd33mqjjg5tog" path="res://scenes/drop_zone.tscn" id="2_6dppa"]
[ext_resource type="Script" path="res://scripts/battery_container.gd" id="4_6fw3v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_78aac"]
size = Vector2(48, 96)

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource("1_qc5es")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_78aac")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
offset_left = -24.0
offset_top = -48.0
offset_right = 24.0
offset_bottom = 48.0
color = Color(1, 0, 0, 1)

[node name="CableLeft" parent="." instance=ExtResource("1_gw5f2")]
position = Vector2(-48, 0)

[node name="CableRight" parent="." instance=ExtResource("1_gw5f2")]
position = Vector2(48, 0)

[node name="DropZone" parent="." instance=ExtResource("2_6dppa")]
script = ExtResource("4_6fw3v")

[connection signal="cable_connect" from="CableLeft" to="." method="_on_cable_left_cable_connect"]
[connection signal="cable_disconnect" from="CableLeft" to="." method="_on_cable_left_cable_disconnect"]
[connection signal="cable_connect" from="CableRight" to="." method="_on_cable_right_cable_connect"]
[connection signal="cable_disconnect" from="CableRight" to="." method="_on_cable_right_cable_disconnect"]
[connection signal="item_dropped" from="DropZone" to="." method="_on_drop_zone_item_dropped"]
